Few tweaks and moved passives into skills. Builds show skills on lists.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -69,7 +69,7 @@
 		</div>
 
 		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: I just added real skills into all of the builds, feel free to edit your skills in the "Skills" on your build page. Feel free to checkout the end result on <a href="/b/2">my build</a>. I'm not done with the interface yet, but as always, email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+			<b>System Message</b>: "Item Perfection" ratings are in, read more about it here. Also see it in action on <a href="http://d3up.com/i/10014">any item</a>. Feel free to email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 		</div>
 
 		<div id="main">
@@ -91,5 +91,6 @@
 	<script src="//static.getclicky.com/js" type="text/javascript"></script>
 	<script type="text/javascript">try{ clicky.init(66607061); }catch(e){}</script>
 	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66607061ns.gif" /></p></noscript>
+	<div class="d3up-tooltip"></div>
 </body>
 </html>
