Updated link in sysmessages.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -69,7 +69,7 @@
 		</div>
 
 		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: "Item Perfection" ratings are in, read more about it here. Also see it in action on <a href="http://d3up.com/i/10014">any item</a>. Feel free to email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+			<b>System Message</b>: "Item Perfection" ratings are in, <a href="http://d3up.com/update/16">read more about it here</a>. Also see it in action on <a href="http://d3up.com/i/10014">any item</a>. Feel free to email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 		</div>
 
 		<div id="main">
