--- a/application/views/scripts/user/shop/help.phtml
+++ b/application/views/scripts/user/shop/help.phtml
@@ -6,5 +6,7 @@
 <p>To start with, we just have a simple table interface to report on data. Over time, this will be expanded into statistics about your sales, regional sales and global sales about items with specific attributes.</p>
 <p>When the sale completes, you can either hit the complete button to record how much it sold for or hit the "Didn't Sell" button which will record a failed sale (It's good to figure out how much things DON'T sell for too). It will keep track of the completed/failed sales, as well as the attributes on the items.</p>
 <img src="/images/help/complete.png" width="900"/>
+<p>After you've build up a sales history, the statistics tab will start populating data based on your sales. Currently it will list sales by date in a table, with some overall statistics above it.</p>
+<img src="/images/help/stats.png" width="900"/>
 <p>I'm not a huge statistics person, but I'd be interested in hearing what kind of data you'd like to see and how it could become useful. Feel free to contact me (<a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>) if you're interested in coming up with some useful reports or statistics! :)</p>
 <p>Interested in starting your shop and contributing? Feel free to wander over to the <a href="/user/register">registration page</a> to create an account, or if you already have one, you can <a href="/user/login">login</a>.</p>
