--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -588,7 +588,7 @@ dd:has(:focus) .chzn-container {
 }
 .item-stat .stat {
 	display: block; 
-	font-size: 10px;
+	font-size: 0.6em;
 	line-height: 1.5em;
 }
 .d3up-table td.sorted {
