--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="/js/site.js"></script>
 	<script type="text/javascript" src="/js/tooltip.js"></script>
 	<script type="text/javascript" src="/js/jquery.diff.js"></script>
+	
 	<script type="text/javascript" src="/js/jquery.dataTables.js"></script>
 	<script type="text/javascript" language="javascript" src="/js/jquery.dropdown.js"></script>
 	
@@ -70,7 +71,7 @@
 		</div>
 
 		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: "Item Perfection" ratings are in, <a href="http://d3up.com/update/16">read more about it here</a>. Also see it in action on <a href="http://d3up.com/i/10014">any item</a>. Feel free to email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+			<b>System Message</b>: If you find any bugs, please email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 		</div>
 
 		<div id="main">
