--- a/application/views/scripts/user/items.phtml
+++ b/application/views/scripts/user/items.phtml
@@ -358,8 +358,9 @@
 		} ?>
 	</script>
 	<? endif ?>
+	<script type="text/javascript" src="/js/skills.js"></script>
 	<script type="text/javascript" src="/js/calc.js"></script>
-	<script type="text/javascript" src="/js/fullbrowser.js"></script>
+	<script type="text/javascript" src="/js/browser.js"></script>
 	<? else: ?>
 	<p>You don't have any items yet!</p>
 	<p>Click the "Add Item" button above to get started.</p>
