New sys message

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -71,7 +71,7 @@
 		</div>
 
 		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: If you find any bugs, please email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+			<b>System Message</b>: Huge update today, including the new "Item Simulator" and "DPS Contributions from Gear" - <a href="http://d3up.com/update/17">Read more about it here</a>. If you find any bugs, hold down shift and click refresh. If that doesn't work, please email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 		</div>
 
 		<div id="main">
