Fixed Editing Items.

--- a/application/views/scripts/item/edit.phtml
+++ b/application/views/scripts/item/edit.phtml
@@ -32,6 +32,7 @@
 		</div>
 	</form>
 </div>
+<script type="text/javascript" src="/js/skills.js"></script>
 <script type="text/javascript" src="/js/item.js"></script>
 <script type="text/javascript">
 <? if($this->record->id): ?>
