--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -252,5 +252,5 @@ var activeActives = [];
 	</form>
 </div>
 <script type="text/javascript" src="/js/skills.js"></script>
-<script type="text/javascript" src="/js/calcv2.js"></script>
-<script type="text/javascript" src="/js/build.js"></script>
+<script type="text/javascript" src="/js/calcv2.js?time=<?= time() ?>"></script>
+<script type="text/javascript" src="/js/build.js?time=<?= time() ?>"></script>
