--- a/application/views/scripts/index/faqs/gear-based-ehp.phtml
+++ b/application/views/scripts/index/faqs/gear-based-ehp.phtml
@@ -1,3 +1,6 @@
 <h1>Gear Based EHP Calculations</h1>
-<p>The gear-based EHP calculations are based on calculations made if that was the only item you're currently wearing. This includes having a base life of 4721, 0 armor and 0 resist all, then the individual piece is added into those stats.</p>
+<p>Updated: Jul 26, 2012</p>
+<p>The gear based EHP calculations are calculated by comparing your EHP while wearing all of your gear, then determining what you would lose if you were to completely remove that piece. For example: </p>
+<pre>450,000 EHP w/ Full Gear - 420,000 EHP w/ Full Gear (Minus the Selected Piece) = 30,000 Gear EHP Contribution</pre>
+<p>It is done for each piece of gear you are wearing and displayed on the Gear EHP Contributions section of the EHP tab.</p>
 <p>If you have a better method, feel free to <a href="mailto:aaron.cox@greymass.com">email me!</a></p>
