--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -251,6 +251,6 @@ var activeActives = [];
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/skills.js"></script>
-<script type="text/javascript" src="/js/calcv2.js?time=<?= time() ?>"></script>
-<script type="text/javascript" src="/js/build.js?time=<?= time() ?>"></script>
+<script type="text/javascript" src="/js/unmin/skills.js"></script>
+<script type="text/javascript" src="/js/unmin/calcv2.js?time=<?= time() ?>"></script>
+<script type="text/javascript" src="/js/unmin/build.js?time=<?= time() ?>"></script>
