--- a/application/views/scripts/item/bazaar.phtml
+++ b/application/views/scripts/item/bazaar.phtml
@@ -268,6 +268,7 @@
 							}
 							$attrs = $item->attrs->getAttributesArray($item->type);
 							$export = $item->cleanExport();
+							$socketAttrs = array();
 							if(isset($export['socketAttrs'])) {
 								$socketAttrs = $export['socketAttrs'];
 							}
