Fixed sockets in the simulator

--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -33,7 +33,7 @@
 		</div>
 	</form>
 </div>
-<script type="text/javascript" src="/js/skills.js"></script>
+<script type="text/javascript" src="/js/skills.js?time=<?= time() ?>"></script>
 <script type="text/javascript" src="/js/item.js"></script>
 <script type="text/javascript">
 <? if(!empty($_POST)): ?>
