--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -252,6 +252,6 @@ var activeActives = [];
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/skills.js"></script>
+<script type="text/javascript" src="/js/skills.js?time=<?= time() ?>"></script>
 <script type="text/javascript" src="/js/calcv2.js?time=<?= time() ?>"></script>
 <script type="text/javascript" src="/js/build.js?time=<?= time() ?>"></script>
