--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -74,7 +74,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Huge update today, including the new "Item Simulator" and "DPS Contributions from Gear" - <a href="http://d3up.com/update/17">Read more about it here</a>. If you find any bugs, hold down shift and click refresh. If that doesn't work, please email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+					<b>System Message</b>: I've setup a <a href="http://facebook.com/d3upgrade">Facebook Page</a> for D3Up as another way you can chat with me and offer up feedback, make sure to like it and share with your D3 Friends to help get the word out! As always, please submit feedback/bugs/suggestions/anything via email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 				</div>
 			</div>
 		</div>
