--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,13 +1,43 @@
 <div class="home inline-flow">
 	<div class="recent-builds">
-		<h2 class="table-header">Recent Character Builds</h2>
+		<h2 class="table-header">Recently Completed Builds</h2>
 		<table id="recent-builds" class="d3up-table">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Name</th>
+					<th>DPS</th>
+					<th>EHP</th>
+					<th>Skills</th>
+				</tr>
+			</thead>
 			<tbody>
 			<? foreach($this->builds as $build): ?>
 				<tr class="item-row">
 					<td class="icon"><img src="/images/<?= $build->class ?>.png"/></td>
-					<td class="name"><?= $this->mLink($build) ?></td>
-					<td><?= $build->description ?></td>
+					<td class="name" nowrap="nowrap"><?= $this->mLink($build) ?></td>
+					<td class="stat"><?= $this->prettyStat($build->stats['dps']) ?></td>
+					<td class="stat"><?= $this->prettyStat($build->stats['ehp']) ?></td>
+					<td class="skills">
+						<? if($build->actives): ?>
+							<? foreach($build->actives as $active): ?>
+								<? 
+									$explode = explode("~", $active);
+									$skill = $explode[0];
+								?>
+								<img data-class="<?= $build->class ?>" data-id="<?= $active ?>" src="/images/icons/<?= $build->class ?>-<?= $skill ?>.png" class="skill-tip"/>
+							<? endforeach ?>
+						<? endif ?>
+						<? if($build->passives): ?>
+							<? foreach($build->passives as $passive): ?>
+								<? 
+									$explode = explode("~", $passive);
+									$skill = $explode[0];
+								?>
+								<img data-class="<?= $build->class ?>" data-id="<?= $passive ?>" src="/images/icons/<?= $build->class ?>-<?= $skill ?>.png" class="skill-tip"/>
+							<? endforeach ?>
+						<? endif ?>
+					</td>
 				</tr>
 			<? endforeach; ?>
 			</tbody>
@@ -75,11 +105,11 @@
 								$val += $socketAttrs[$k];
 							}
 						?>
-						<? if($count > 6) { continue; } ?>
+						<? if($count > 4) { continue; } ?>
 						<td><?= $this->itemStat($k, $val) ?></td>
 					<? endforeach ?>
-					<? if($count < 6): ?>
-						<? for($i = $count; $i < 6; $i++): ?>
+					<? if($count < 4): ?>
+						<? for($i = $count; $i < 4; $i++): ?>
 							<td>&nbsp;</td>
 						<? endfor ?>
 					<? endif ?>
