More homepage updates - added recent sales.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -44,6 +44,42 @@
 		</table>
 	</div>
 	<div class="recent-items">
+		<h2 class='table-header'>Recently Sold Items</h2>
+		<table class="d3up-table">
+		<tbody>
+			<? foreach($this->sales as $sale): ?>
+				<tr class="item-row" id="sale-<?= $sale->id ?>">
+					<td class="data"><?= $this->timeAgo($sale->soldOn) ?></td>
+					<td class='name'><?= $this->itemLink($sale->item) ?></td>
+					<td class="data">
+						<? if($sale->soldSuccess): ?>
+							<span class='pos'>Sold</span> 
+						<? else: ?>
+							<span class='neg'>Not Sold</span>
+						<? endif ?>
+					</td>
+					<td class='data'>
+						<?= $this->regionDisplay($sale->region) ?>
+					</td>
+					<td class="data"> 
+						<div class='item-stat'>
+							<? if($sale->method == 'ah'): ?>
+								<span class='value'>
+									<img src="/images/goldcoin.png"> <?= $this->prettyStat($sale->soldFor / 0.85) ?>
+								</span>
+								<span class="stat">
+									<?= $this->prettyStat($sale->soldFor) ?> after AH cut
+								</span>
+							<? else: ?>
+							<? endif ?>
+						</div>
+					</td>					
+				</tr>
+				<? endforeach ?>
+			</tbody>
+		</table>
+	</div>
+	<div class="recent-items">
 		<h2 class='table-header'>Recently Created Items</h2>
 		<table class="d3up-table">
 		<tbody>
