Few extra page titles.

--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -1,3 +1,6 @@
+<?
+	$this->headTitle("Create a Diablo 3 Item"); 
+?>
 <div class="create-form ui-widget ui-widget-content ui-corner-all ui-helper-clearfix">
 	<form method="post">
 		<div class="item-preview">
