--- a/application/views/scripts/user/shop.phtml
+++ b/application/views/scripts/user/shop.phtml
@@ -1,3 +1,6 @@
+<?
+	$this->headTitle("My Shop"); 
+?>
 <? if($this->notLoggedIn): ?>
 	<h1 class="table-header">My Shop</h1>
 	<div class="user-shop">
